--- a/admin/view/default/config/proftpd.conf
+++ b/admin/view/default/config/proftpd.conf
@@ -7,8 +7,8 @@ RootLogin off
 MaxClients                      200
 
 # Normally, we want files to be overwriteable.
-AllowOverwrite          on
-
+AllowOverwrite           on
+UseReverseDNS            off
 # Bar use of SITE CHMOD by default
 #<Limit SITE_CHMOD>
 #  DenyAll
@@ -18,7 +18,7 @@ AllowOverwrite          on
 # want anonymous users, simply delete this entire <Anonymous> section.
 #<Anonymous ~ftp>
 #  User                         ftp
-#  Group                                ftp
+#  Group                        ftp
 
   # We want clients to be able to login with "anonymous" as well as "ftp"
 #  UserAlias                    anonymous ftp
