update proftpd config file.

--- a/admin/view/default/config/proftpd.conf
+++ b/admin/view/default/config/proftpd.conf
@@ -1,41 +1,22 @@
+ServerName                      "kangle vhms ftp server"
+ServerType                      standalone
+DefaultServer                   on
+IdentLookups             		off
+UseReverseDNS            		off
+Port                            21
+Umask                           022
+
+MaxInstances                    200
+User                            nobody
+Group                           nobody
+MaxLoginAttempts 3
+DefaultRoot ~
 TimeoutNoTransfer 1200
 TimeoutStalled 900
 RootLogin off
-#<Global>
-#DenyFilter "[cC][hH][mM][oO][dD]"
-#</Global>
 MaxClients                      200
-
-# Normally, we want files to be overwriteable.
 AllowOverwrite           on
-UseReverseDNS            off
-# Bar use of SITE CHMOD by default
-#<Limit SITE_CHMOD>
-#  DenyAll
-#</Limit>
 
-# A basic anonymous configuration, no upload directories.  If you do not
-# want anonymous users, simply delete this entire <Anonymous> section.
-#<Anonymous ~ftp>
-#  User                         ftp
-#  Group                        ftp
-
-  # We want clients to be able to login with "anonymous" as well as "ftp"
-#  UserAlias                    anonymous ftp
-
-  # Limit the maximum number of anonymous logins
-#  MaxClients                   10
-
-  # We want 'welcome.msg' displayed at login, and '.message' displayed
-  # in each newly chdired directory.
-#  DisplayLogin                 welcome.msg
-#  DisplayFirstChdir            .message
-
-  # Limit WRITE everywhere in the anonymous chroot
-#  <Limit WRITE>
-#    DenyAll
-#  </Limit>
-#</Anonymous>
 MaxClientsPerUser 10 "max client per user is 10"
 AllowForeignAddress  on
 AllowRetrieveRestart on
