add node_db is sqlite support.

--- a/admin/view/default/config/linxftp.conf
+++ b/admin/view/default/config/linxftp.conf
@@ -1,13 +1,17 @@
 port		21
 time_out	300
-
+base_root			{{$dev}}
+{{if $node_db == 'sqlite'}}
+auth_module bin/auth_sqlite.dll
+dbname      etc/vhs.db
+{{else}}
+auth_module bin/auth_mysql.dll
 db_host		{{$db.host}}
 db_port		{{$db.port}}
 db_user		{{$db.user}}
 db_pass		{{$db.passwd}}
 db_database	{{$db.dbname}}
 db_table	{{$table}}
-
 
 col_user			{{$col.name}}
 col_password		{{$col.passwd}}
@@ -16,4 +20,4 @@ col_password_func	md5
 col_win_user		{ concat('a',{{$col.uid}}) }
 col_win_password	{{$col.gid}}
 sql_add				{ and {{$col.node}} = '{{$node}}' }
-base_root			{{$dev}}
+{{/if}}
