--- a/admin/view/default/config/proftpd.conf
+++ b/admin/view/default/config/proftpd.conf
@@ -5,18 +5,14 @@ IdentLookups             		off
 UseReverseDNS            		off
 Port                            21
 Umask                           022
-
 MaxInstances                    200
-User                            nobody
-Group                           nobody
 MaxLoginAttempts 3
 DefaultRoot ~
 TimeoutNoTransfer 1200
 TimeoutStalled 900
 RootLogin off
 MaxClients                      200
-AllowOverwrite           on
-
+AllowOverwrite           		on
 MaxClientsPerUser 10 "max client per user is 10"
 AllowForeignAddress  on
 AllowRetrieveRestart on
@@ -25,15 +21,26 @@ AllowStoreRestart on
     SQLPasswordEngine on
     SQLPasswordEncoding hex
 </IfModule>
+{{if $node_db=='sqlite'}}
+User                            root
+Group                           root
+SQLBackend                      sqlite
+SQLConnectInfo                  /vhs/kangle/etc/vhs.db
+SQLUserInfo                     vhost name passwd uid gid doc_root NULL
+{{else}}
+SQLBackend                      mysql
+User                            nobody
+Group                           nobody
+SQLConnectInfo                  {{$db.dbname}}@{{$db.host}} {{$db.user}} {{$db.passwd}}
+SQLUserInfo                     {{$table}} {{$col.name}} {{$col.passwd}} {{$col.uid}} {{$col.gid}} {{$col.doc_root}} NULL
+SQLUserWhereClause              "{{$col.node}} = '{{$node}}'" 
+{{/if}}
 SQLAuthTypes                    MD5
 SQLAuthenticate                 users
-SQLConnectInfo                  {{$db.dbname}}@{{$db.host}} {{$db.user}} {{$db.passwd}}
-SQLUserInfo                     {{$table}} {{$col.name}} {{$col.passwd}} {{$col.uid}} {{$col.gid}} {{$col.doc_root}} NULL 
 SQLDefaultGID                   65534
 SQLDefaultUID                   65534
 SQLMinUserGID                   100
 SQLMinUserUID                   800
-SQLUserWhereClause              "{{$col.node}} = '{{$node}}'"
 RequireValidShell               off
 #SQLLog PASS accesslog
 #SQLNamedQuery accesslog FREEFORM "INSERT INTO ftp_log (userid,ip) VALUES ('%u','%a')"
