--- a/admin/view/default/config/db_config.conf
+++ b/admin/view/default/config/db_config.conf
@@ -1,5 +1,11 @@
 <?php
 $skey = '{{$skey}}';
+{{if $node_db=='sqlite'}}
+$db_cfg['driver'] = 'sqlite';
+$db_cfg['sql'] = "SELECT passwd,uid,gid,doc_root FROM vhost WHERE name='%s'";
+$db_cfg['db'] = dirname(__FILE__).'/vhs.db';
+{{else}}
+$db_cfg['driver'] = 'mysql';
 $db_cfg['host'] = '{{$db.host}}';
 $db_cfg['port'] = {{$db.port}};
 $db_cfg['user'] = '{{$db.user}}';
@@ -9,5 +15,6 @@ $db_cfg['dbname'] = '{{$db.dbname}}';
 $db_cfg['sql'] = "SELECT {{$col.passwd}},concat('a',{{$col.uid}}),{{$col.gid}},concat('{{$dev}}',{{$col.doc_root}}) FROM {{$table}} WHERE {{$col.name}}='%s'";
 {{else}}
 $db_cfg['sql'] = "SELECT {{$col.passwd}},{{$col.uid}},{{$col.gid}},{{$col.doc_root}} FROM {{$table}} WHERE {{$col.name}}='%s'";
+{{/if}}
 {{/if}}
 ?>
